# repository2

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
UML/: diagram0.drawio  diagram1.drawio
project/: CMakeLists.txt  README.md  install.sh  main.cpp  main.h
project/src/: AbstractFactory.cpp  AbstractFactory.h  Artifact.cpp  Artifact.h  AttackType.cpp  AttackType.h  Card.cpp  Card.h  Client.cpp  Client.h  Constants.h  EffectType.cpp  EffectType.h  Enemy.cpp  Enemy.h  GameProcess.cpp  GameProcess.h  LiveObject.cpp  LiveObject.h  Map.cpp  Map.h  PlayerGameObject.cpp  PlayerGameObject.h  Room.cpp  Room.h  RoomFactory.cpp  RoomFactory.h
project/src/AbstractFactory/: AbstractFactory.cpp  AbstractFactory.h  CMakeLists.txt  CommonFactory.cpp  CommonFactory.h  Creator.cpp  Creator.h  StrongFactory.cpp  StrongFactory.h  WeakFactory.cpp  WeakFactory.h
project/src/Artifact/: Artifact.cpp  Artifact.h  ArtifactFactory.cpp  ArtifactFactory.h  CMakeLists.txt  DamageArtifact.cpp  DamageArtifact.h
project/src/Card/: CMakeLists.txt  Card.cpp  Card.h  CommonCard.cpp  CommonCard.h  StrongCard.cpp  StrongCard.h  WeakCard.cpp  WeakCard.h
project/src/Const/: Constants.h
project/src/Enemy/: CMakeLists.txt  CommonEnemy.cpp  CommonEnemy.h  Enemy.cpp  Enemy.h  StrongEnemy.cpp  StrongEnemy.h  WeakEnemy.cpp  WeakEnemy.h
project/src/Game/: CMakeLists.txt  Client.cpp  Client.h  ConsoleInterface.cpp  ConsoleInterface.h  GameProcess.cpp  GameProcess.h  InterfaceChooser.cpp  InterfaceChooser.h  PlayerGameObject.cpp  PlayerGameObject.h
project/src/Interface/: CMakeLists.txt  ConsoleInterface.cpp  ConsoleInterface.h  InterfaceChooser.cpp  InterfaceChooser.h  InterfaceStrategy.cpp  InterfaceStrategy.h
project/src/LiveObject/: CMakeLists.txt  LiveObject.cpp  LiveObject.h
project/src/Map/: CMakeLists.txt  Map.cpp  Map.h
project/src/Reward/: CMakeLists.txt  Reward.cpp  Reward.h
project/src/Room/: CMakeLists.txt  ChillRoom.cpp  ChillRoom.h  CombatRoom.cpp  CombatRoom.h  EndRoom.cpp  EndRoom.h  Room.h
project/src/RoomFactory/: CMakeLists.txt  ChillRoomFactory.cpp  ChillRoomFactory.h  CombatRoomFactory.cpp  CombatRoomFactory.h  EndRoomFactory.cpp  EndRoomFactory.h  RoomFactory.cpp  RoomFactory.h
project/src/Types/: AttackType.cpp  AttackType.h  CMakeLists.txt  EffectType.cpp  EffectType.h
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: index.h  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h  main_test.cpp  tests.cpp
task2/C/A/: preparing.py
task2/C/B/: CMakeLists.txt  lib.h
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task4/tests/02-tree/: TreeTestCase.cpp
task4/tests/03-weather/: WeatherMock.cpp  WeatherMock.h  WeatherTestCase.cpp
task5/cmake-with-flask/: Dockerfile
test/: CMakeLists.txt
